// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar: should be able to select heading1 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading1 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading2 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading2 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading3 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading3 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading4 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading4 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading5 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading5 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading6 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select heading6 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;
